[package]
name = "tetris"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.23", default-features = false, features = ["png", "jpeg"] }
num-complex = "0.4.0"
pollster = "0.2.4"
rand = "0.8.4"
wgpu = "0.11"
winit = "0.25"
